--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       POSTGRES_DB: profile_login_app
     volumes:
       - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - db_data:/var/lib/postgresql/data
 
   backend:
     build: ./backend
@@ -25,6 +26,7 @@ services:
       - db
     volumes:
       - ./backend:/app
+      - /app/node_modules
     working_dir: /app
     command: ["npm", "run", "dev"]
 
@@ -35,3 +37,6 @@ services:
       - "3000:80"
     depends_on:
       - backend
+
+volumes:
+  db_data:
