--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,8 +41,13 @@ services:
     container_name: frontend_container
     ports:
       - "3000:80"
+    environment:
+      - NODE_ENV=development
     depends_on:
       - backend
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
 
 volumes:
   db_data:
