--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,7 +7,9 @@ RUN npm install
 
 COPY . .
 RUN npm run build
+# EXPOSE 3000
 
+# CMD ["npm", "run", "dev"]
 
 FROM nginx:alpine
 COPY --from=builder /app/dist /usr/share/nginx/html
